# muktee

./: .gitignore  CMakeLists.txt  README.md  install.sh  tp_new.tgz
Board/: Board.java  Solver.java
ap_grid/: CMakeLists.txt  ap_grid3x3.c
apps/: CMakeLists.txt
apps/tp_client/: CMakeLists.txt  app.cpp
apps/tp_test/: CMakeLists.txt  app.cpp  general.hpp  remote.hpp
collinear/: BruteCollinearPoints.java  FastCollinearPoints.java  Point.java
deque/: Deque.java  Permutation.java  RandomizedQueue.java
deque/test/: strings.txt
fcw/: callback.cpp  fcw  fcw.cpp  fcw.hpp  pid.cpp
fcw/ui/build-fcw-Desktop_Qt_6_0_2_MinGW_64_bit-Debug/: ui_widget.h
fcw/ui/build-fcw-Desktop_Qt_6_0_2_MinGW_64_bit-Debug/debug/: moc_widget.cpp
fcw/ui/build-fcw-Qt_5_15_0-Debug/: Makefile  fcw  moc_widget.cpp  ui_widget.h
fcw/ui/build-fcw-test_kit-Debug/: Makefile  fcw  moc_widget.cpp
fcw/ui/fcw/: fcw  fcw.cpp  fcw.hpp  fcw.pro  include.h  main.cpp  widget.cpp  widget.h
funcptr/: CMakeLists.txt  funcptr.cpp
goodnessstring/: CMakeLists.txt  k_goodnessstring.c
kdtree/: KdTree.java  KdTreeVisualizer.java  NearestNeighborVisualizer.java  PointSET.java
kdtree-1/: KdTree.java  NearestNeighborVisualizer.java  PointSET.java
kick-start-overview/: CMakeLists.txt  IO.c  buffer_overflow.c  char_overflow.c  input.txt  stack.c
l_shape/: CMakeLists.txt  L_shaped.c
percolation/: Percolation.java  PercolationStats.java  PercolationVisualizer.java
percolation/test/: input4.txt  java_out.txt  jerry47_out.txt
pkglist/: pkglist1  pkglist2
rabbit_house/: CMakeLists.txt  rabbit_house.c
rabbit_house/test_data/: rabbit_house.c
skinsmooth-sunglass-filter/: CMakeLists.txt  detectFaceSmooth.cpp
src/: CMakeLists.txt  config.file  remote.hpp  tp.cpp  tp.hpp  tp_util.cpp  tp_util.hpp
src/dot2/: CMakeLists.txt  dot2cert.cpp  dot2cert.hpp  dot2common.hpp  dot2data.cpp  dot2data.hpp  dot2encdec.cpp  dot2encdec.hpp
test-inst/: CMakeLists.txt  sampleCode.cpp
v2x/: CMakeLists.txt  config.file  ec_key_obj.txt  ecc_key.txt  ieee1609dot2 copy.cpp  ieee1609dot2.cpp  ieee1609dot2.hpp  ieee1609dot2cert.cpp  ieee1609dot2cert.hpp  ieee1609dot2common.hpp  ieee1609dot2data.cpp  ieee1609dot2data.hpp  ieee1609dot2encdec.cpp  remote.hpp  v2x.hpp
v2x/tp/: CMakeLists.txt  tp.cpp  tp.hpp  tp_util.hpp
v2x/tp/ieee1609/: CMakeLists.txt  dot2cert.cpp  dot2cert.hpp  dot2data.cpp  dot2data.hpp  dot2encdec.hpp
v2x/tp_client/: CMakeLists.txt  app.cpp
v2x/tp_test/: CMakeLists.txt  app.cpp  remote.hpp
v2x/trusted_platform/: CMakeLists.txt
v2x/trusted_platform/apps/tp_client/: CMakeLists.txt
v2x/trusted_platform/apps/tp_test/: CMakeLists.txt  app.cpp
v2x/trusted_platform/src/: config.file  tp.cpp  tp.hpp
v2x/trusted_platform/src/dot2/: CMakeLists.txt  dot2cert.cpp  dot2data.hpp
week2/assignment/: CMakeLists.txt  submission.cpp
week6/: CMakeLists.txt  submission.cpp
week6/chromakey/: CMakeLists.txt  readme.txt  submission.cpp
