cmake_minimum_required(VERSION 2.8.12)
# set(TARGET tp_client)
# PROJECT(${TARGET})
SET(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
# message(${PROJECT_BINARY_DIR})
# message(${CMAKE_BINARY_DIR})

add_compile_options(-O3 -fpermissive -Wunused-variable)
include(GNUInstallDirs)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR})


# set(CMAKE_BINARY_DIR ${pwd})

add_subdirectory(apps)
add_subdirectory(src)
# add_subdirectory(tp ${CMAKE_BINARY_DIR})
file(COPY src/config.file DESTINATION ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR})
# file(COPY tp/config.file DESTINATION ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR})




