cmake_minimum_required(VERSION 2.8.12)
if(NOT USE_COSMO_TP)
    SET(CMAKE_CXX_STANDARD 11)
    set(CMAKE_CXX_EXTENSIONS OFF)
    set(CMAKE_CXX_STANDARD_REQUIRED ON)
endif()

add_compile_options(-O3 -fpermissive -Wunused-variable)
include(GNUInstallDirs)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR})


if(NOT USE_COSMO_TP)
    add_subdirectory(apps)
endif()
add_subdirectory(src)
file(COPY src/config.file DESTINATION ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR})




